# Soft-body-simulator

./: .gitignore  CMakeLists.txt  Dipole.cpp  Dipole.h  MPoint.cpp  MPoint.h  README.md  Spring.cpp  Spring.h  System.cpp  System.h  Vector2f.cpp  Vector2f.h  Vector3f.cpp  Vector3f.h  eu.txt  kagribi.txt  main.cpp  pos.txt  system.txt  system2.txt
inc/: CMakeLists.txt  Dipole.h  IndexBuffer.h  MPoint.h  Obstacle.h  Shader.h  Spring.h  System.h  Vector2f.h  Vector3f.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  Walls.h  Window.h
src/: CMakeLists.txt  IndexBuffer.cpp  MPoint.cpp  Obstacle.cpp  Shader.cpp  Spring.cpp  System.cpp  Vector2f.cpp  Vector3f.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp  Walls.cpp  Window.cpp  main.cpp
src/shaders/: fshader.glsl  vshader.glsl
textf/: cosine.txt  kagribi.txt  rk4.txt  system.txt
